ch-remote: add skip zero pages option to API/CLI
On-behalf-of: SAP julian.schindel@sap.com

# Conflicts:
#	vmm/src/lib.rs
